Fix sonar code smells
Signed-off-by: Miroslav Gatsanoga <miroslav.gatsanoga@limechain.tech>